--- a/src/main/webapp/pages/protocolo/edit.xhtml
+++ b/src/main/webapp/pages/protocolo/edit.xhtml
@@ -64,7 +64,7 @@
           <p:tab id="preMedTab" title="#{docEntry.key}">
 
             <p:dataTable value="#{docEntry.value}" var="doc"
-                         selection="#{protocoloController.mapSelectedDocumentos[docEntry.key]}" rowKey="#{doc.codigo}">
+                         selection="#{protocoloController.mapSelectedDocumentos[docEntry.key]}" rowKey="#{doc.codigo}" sortBy="#{doc.dataHoraCriacao}">
 
               <p:column selectionMode="multiple" width="16"/>
 
@@ -73,6 +73,9 @@
               </p:column>
               <p:column headerText="Prestador" styleClass="left-align">
                 <h:outputText value="#{doc.prestador}"/>
+              </p:column>
+              <p:column headerText="Conselho" styleClass="left-align">
+                <h:outputText value="#{doc.conselho}"/>
               </p:column>
               <p:column headerText="Data/Hora criação" styleClass="left-align">
                 <h:outputText value="#{doc.dataHoraCriacao}">
@@ -84,8 +87,11 @@
                   <f:convertDateTime pattern="dd/MM/yyyy HH:mm:ss"/>
                 </h:outputText>
               </p:column>
-              <p:column headerText="Evolução" styleClass="left-align">
-                <h:outputText value="#{doc.hasEvolucao}"/>
+              <p:column headerText="Tipo" styleClass="left-align">
+                <h:outputText value="#{doc.tipo}"/>
+              </p:column>
+              <p:column headerText="Quantidade Docs" styleClass="left-align">
+                <h:outputText value="#{doc.qtdDoc}"/>
               </p:column>
 
             </p:dataTable>
