--- a/src/main/webapp/resources/vah/toolTip.xhtml
+++ b/src/main/webapp/resources/vah/toolTip.xhtml
@@ -8,10 +8,11 @@
   <composite:attribute name="for"/>
   <composite:attribute name="value"/>
   <composite:attribute name="index"/>
+  <composite:attribute name="rendered"/>
 </composite:interface>
 
 <composite:implementation>
-  <h:panelGroup id="#{cc.attrs.id}">
+  <h:panelGroup id="#{cc.attrs.id}" rendered="#{empty cc.attrs.rendered ? true : cc.attrs.rendered}">
     <div id="mdl#{cc.attrs.id}#{cc.attrs.index}" for="#{cc.attrs.for}" class="mdl-tooltip guia-tooltip">
       <h:outputText value="#{cc.attrs.value}"/>
     </div>
